//---------------------------------------------------------------------
//---------------------------------------------------------------------
syntax = "proto3";

//---------------------------------------------------------------------
//---------------------------------------------------------------------
package ni.measurementlink.measurement.non_streaming_data_measurement.v1;

//---------------------------------------------------------------------
//---------------------------------------------------------------------

enum ProtobufColor{
    NONE = 0;
    PINK = 1;
    WHITE = 2;
    BLACK = 3;
}